fix repl output errors

--- a/repl.html
+++ b/repl.html
@@ -124,9 +124,8 @@
 sbol --trace --output sbol3 \
   namespace "http://example.com/" \
   sbol-version 3 \
-  component \
+  component lac_inverter \
     --type DNA \
-    --displayId lac_inverter \
 &gt; lac_inverter.xml
 </textarea>
 </div>
